infra/k8s/metallb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: metallb-system
  name: controller
spec:
  selector:
    matchLabels:
      component: controller
  replicas: 1
  template:
    metadata:
      labels:
        component: controller
    spec:
      serviceAccountName: metallb-controller
      containers:
      - name: controller
        image: quay.io/metallb/controller:v0.12.1
        args:
        - --config=namespace=metallb-system
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
        imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: metallb-system
  name: speaker
spec:
  selector:
    matchLabels:
      component: speaker
  template:
    metadata:
      labels:
        component: speaker
    spec:
      serviceAccountName: metallb-speaker
      hostNetwork: true
      containers:
      - name: speaker
        image: quay.io/metallb/speaker:v0.12.1
        args:
        - --port=7472
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
        imagePullPolicy: IfNotPresent
